# Ceader

./: .bandit.yaml  .coverage  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: CI.yaml  coverage.yaml  release.yaml  test.yaml
ceader/: __init__.py  __main__.py
ceader/adapters/: __init__.py  file_disk_repo.py
ceader/app/: __init__.py
ceader/domain/: repositories.py  utils.py
ceader/domain/header_procedure/: __init__.py  add_header_procedure.py  remove_header_procedure.py
ceader/domain/knowledge/: extensions_to_language.py  language_to_comment.py
ceader/domain/types/: enums.py
ceader/ports/: cli.py
ceader/service/: __init__.py
src/ceader/: __main__.py
src/ceader/adapters/: file_disk_repo.py
src/ceader/app/: __init__.py
src/ceader/domain/header_procedure/: __init__.py
src/ceader/domain/knowledge/: extensions_to_language.py  language_to_comment.py
src/ceader/ports/: cli.py
src/ceader/service/: __init__.py
tests/: .test_git_repo_pre-commit-config.yaml  .test_local_repo_pre-commit-config.yaml  .test_pre-commit-config.yaml  __init__.py  test_local_repo_pre-commit-config.yaml
tests/component/: test_cli.py
tests/data/fake_files/: .foo_config.yaml  foo.sh  test.txt  test_2.py  test_4.html  test_5_1.c++
tests/data/headers/: cerebre_header.txt
tests/integration/: test_file_disk_repo.py
tests/unit/utils/: test_get_path_dict_by_extensions.py  test_permissions.py
