[tool.poetry]
name = "ceader"
version = "0.0.1"
description = "Header adding service"
authors = [
    "Kamil Jankowski <kamil@cerebre.io>",
]


[tool.poetry.dependencies]
python = ">=3.9,<3.10"
numpy = "^1.21.4"
isort = "^5.10.1"
bandit = "^1.7.4"
pre-commit = "^2.17.0"
matplotlib = "^3.5.1"
pytest = "^7.1.1"
click = "^8.1.2"


[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.910"
autoflake = "^1.4"
